--- a/index.html
+++ b/index.html
@@ -106,6 +106,6 @@
 
     <script src="script.js"></script>
     <footer><p>Developed By</p>
-    Duke Okeke Robbie Swanson Caleb Brazee</footer>
+    Duke Okeke, Robbie Swanson, Caleb Barzee, Shellman Tyler</footer>
   </body>
 </html>
