--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Gabriela&amp;display=swap" rel="stylesheet">
-
 </head>
+
+
 <body>
     <header>
       <img class="logo" src="./images/logo.jpg" alt="Logo">
@@ -23,6 +24,9 @@
       </nav>
     </header>
 
+
+
+<div class="thebody">
 
 <div class="bodyEx">  
     <section class="short-caption">
@@ -79,6 +83,9 @@
     <section class="res-img">
         <img class="other-images" src="./images/image3.jpg" alt="Resume Preview">  
       </section>
+</div>
+
+
 </div>
 
 <!-- Testimonials  -->
